@@ -22,8 +22,7 @@ INCLUDES = \
 
 LIBS =
 
-myLDFLAGS = # -L$(top_builddir)/build/.libs -L$(top_builddir)/lib/.libs \
-	-L$(top_builddir)/rpmio/.libs -L$(top_builddir)/popt/.libs
+myLDFLAGS = # @LDFLAGS_STATIC@
 
 # XXX libtool can/should generate dependent libs.
 # XXX solaris2.6 cannot use *.la with --all-static (downrev binutils/egcs?)
